home page words

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% set active_page = "home" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block content %}
       
@@ -18,4 +18,11 @@
 		
 		<p class = "homeP">Every food item has a unique ID number. This ID number is called the Nutrient Data Bank Number. You can use <a href="https://codesearch.arsnet.usda.gov/(S(4xl3cxd2f0xeqbivforek0y0))/CodeSearch.aspx">this website</a> 
 		to find different food items by their name or their number.</p>
+		
+		<p class = "homeP"><b>Measured in mcg:</b><br>*Alpha Carotene, Beta Carotene, Beta Cryptoxanthin, Lutein and Zeaxanthin, Lycopene, Retinol, Selenium, Vitamin A - RAE, Vitamin B12, Vitamin K</p>
+		
+		<p class = "homeP"><b>Measured in mg:</b><br>*Cholesterol, Choline, Niacin, Riboflavin, Thiamin, Calcium, Copper, Iron, Magnesium, Phosphorus, Potassium, Sodium, Zinc, Vitamin B6, Vitamin E</p>
+		
+		<p class = "homeP"><b>Measured in g:</b><br>*Carbohydrate, Fiber, Protein, Sugar Total, Water, Monosaturated Fat, Polysaturated Fat, Saturated Fat, Total Lipid</p>
+
    {% endblock %}
