--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 
 
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>{% block title %}{% endblock %} - Food Recommender</title>
+  <title>{% block title %}{% endblock %} - Food Data</title>
   
   </head>
   <body>
