--- a/templates/page1.html
+++ b/templates/page1.html
@@ -2,7 +2,7 @@
 
 {% set active_page = "page1" %}
 
-{% block title %}Page 1{% endblock %}
+{% block title %}Nutrient Facts{% endblock %}
 
 {% block content %}
       
@@ -19,7 +19,7 @@
         </form>
 		
 		<form action="/showNutrients">
-          <select name="description"> <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
+          <select name="description" > <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
             {{ description_options }}
           </select>
           <br><br>
