--- a/templates/page2.html
+++ b/templates/page2.html
@@ -2,7 +2,7 @@
 
 {% set active_page = "page2" %}
 
-{% block title %}Page 2{% endblock %}
+{% block title %}Highest Amounts{% endblock %}
 
 {% block content %}
       
